mysql-workbench (5.2.40+dfsg-2) UNRELEASED; urgency=low

  * Build-Depends on libtinyxml-dev (>= 2.6.2)
    to avoid FTBFS with older versions (Closes: #675336)
  * debian/watch update to reflect mirror changes.
  * xz compression for binary packages.

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 31 May 2012 23:49:30 +1000

mysql-workbench (5.2.40+dfsg-1) unstable; urgency=low

  * New upstream release [May 2012]
  * source compression to .xz
  * dropped glib-single-include.patch (applied upstream).
  * dropped '©' characters from debian/copyright.
  * dropped copyright.hints file.
  * native server administration profile renamed to "Debian".
    (Closes: #671050)
  * dropped unnecessary 'python-all' from Depends (Closes: #674768)
  * limit parallel build to 4 due to FTBFS with 8 CPUs.

  [ Mateusz Kijowski ]
  * debian/copyright cleanup

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 17 May 2012 22:59:56 +1000

mysql-workbench (5.2.38+dfsg-3) unstable; urgency=low

  * native server administration profile (Closes: #667714 I:"Creating new
    server instance profile fails...")
  * patch to fix ifconfig invocation
  * d-rules:
    + better CPU number detection
    + build with all but 'bindnow' hardening

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Fri, 06 Apr 2012 23:00:35 +1000

mysql-workbench (5.2.38+dfsg-2) unstable; urgency=low

  * patch to fix FTBFS with glib 2.32
    (Closes: #665584 I:"individual glib headers no longer supported")
  * d-rules: get correct number of CPUs for parallel build on Linux
    (Closes: #665862 W:"Build process not is paralleled on some Linux
     architectures")

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Tue, 27 Mar 2012 21:57:45 +1100

mysql-workbench (5.2.38+dfsg-1) unstable; urgency=low

  * first Debian release (Closes: #604174 ITP)
    Thanks to David Paleino

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 01 Mar 2012 21:57:30 +1100