@@ -65,8 +65,11 @@ override_dh_makeshlibs:
 	dh_makeshlibs --noscripts
 
 # -dbg package will be over 150 MiB
-#override_dh_strip:
-#	dh_strip --dbg-package=$(PACKAGE)-dbg
+# gracefully handle stripping if -dbg package (un-)commented in debian/control
+override_dh_strip:
+	[ -d "$(CURDIR)/debian/$(PACKAGE)-dbg" ] \
+        && dh_strip --dbg-package=$(PACKAGE)-dbg \
+        || dh_strip
 
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
