@@ -3,6 +3,8 @@ mysql-workbench (5.2.40+dfsg-2) UNRELEASED; urgency=low
   * Build-Depends on libtinyxml-dev (>= 2.6.2)
     to avoid FTBFS with older versions (Closes: #675336)
   * debian/watch update to reflect mirror changes.
+  * debian/rules to gracefully handle stripping if -dbg
+    package is (un-)commented in debian/control.
   * xz compression for binary packages.
 
  -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 31 May 2012 23:49:30 +1000
